fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -516,7 +516,13 @@ svg:hover #sidebarLogo {
     .project-image {
       width: 100%; }
     .project-description {
-      width: 100%; } }
+      width: 100%;
+      align-items: center;
+      text-align: center; }
+  .reverse > .project-description {
+    text-align: center; }
+  .reverse .project-description {
+    align-items: center; } }
 
 @media only screen and (max-width: 400px) {
   .panel .grid img {
