--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -35,17 +35,17 @@
       font-weight: 600;
       border-radius: 12px;
       box-shadow: 3px 3px 0 rgba(14, 121, 178, 1),
-      -3px -3px 0 rgba(255, 255, 255, 1);
+        -3px -3px 0 rgba(255, 255, 255, 1);
       transition: box-shadow 0.1s ease-in-out;
 
       &:hover {
         box-shadow: inset 3px 3px 0 rgba(14, 121, 178, 0.2),
-        inset -3px -3px 0 rgba(255, 255, 255, 0.2);
+          inset -3px -3px 0 rgba(255, 255, 255, 0.2);
       }
 
       &:active {
         box-shadow: inset 3px 3px 0 rgba(14, 121, 178, 1),
-       inset -3px -3px 0 rgba(255, 255, 255, 1);
+          inset -3px -3px 0 rgba(255, 255, 255, 1);
       }
     }
   }
@@ -68,16 +68,16 @@
 
   .more-info {
     box-shadow: -3px 3px 0 rgba(14, 121, 178, 1),
-    3px -3px 0 rgba(255, 255, 255, 1);
+      3px -3px 0 rgba(255, 255, 255, 1);
 
     &:hover {
       box-shadow: inset -3px 3px 0 rgba(14, 121, 178, 0.2),
-     inset 3px -3px 0 rgba(255, 255, 255, 1);
+        inset 3px -3px 0 rgba(255, 255, 255, 1);
     }
 
     &:active {
       box-shadow: inset -3px 3px 0 rgba(14, 121, 178, 1),
-     inset 3px -3px 0 rgba(255, 255, 255, 0.2);
+        inset 3px -3px 0 rgba(255, 255, 255, 0.2);
     }
   }
 }
@@ -132,7 +132,7 @@
   }
   .panel {
     p {
-    font-size: 1.2rem;
+      font-size: 1.2rem;
     }
 
     .grid img {
@@ -143,13 +143,13 @@
     .wide-grid img {
       max-width: 45%;
     }
-  }  
+  }
 }
 
 @media only screen and (max-width: 820px) {
   .panel {
     p {
-    font-size: 0.8rem;
+      font-size: 0.8rem;
     }
 
     .grid img {
@@ -174,8 +174,20 @@
 
     &-description {
       width: 100%;
+      align-items: center;
+      text-align: center;
+    }
   }
-}
+
+  .reverse {
+    & > .project-description {
+      text-align: center;
+    }
+
+    .project-description {
+      align-items: center;
+    }
+  }
 }
 
 @media only screen and (max-width: 400px) {
